fix: Dark mode search readability (#24)

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -29,7 +29,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --ifm-breadcrumb-color-active: var(--ifm-color-primary);
   --ifm-link-color: var(--ifm-color-primary);
-  
+  --docsearch-hit-active-color: var(--ifm-color-gray-900);
 }
 
 .navbar__logo {
